@@ -166,16 +166,16 @@
 0	string		.snd					audio/basic
 8	string		AIFC					audio/x-aifc
 8	string		AIFF					audio/x-aiff
-0	string		.ra\375					audio/x-pn-real-audio
-0	belong		0x2e7261fd				audio/x-pn-real-audio
+0	string		.ra\375					audio/x-pn-realaudio
+0	belong		0x2e7261fd				audio/x-pn-realaudio
 0	string		.RMF					audio/x-pn-realaudio
 8	string		WAVE					audio/x-wav
 8	string		WAV\ 					audio/x-wav
 8	string		CDXA					video/mpeg
 0	string		RIFF					audio/x-riff
 0	string		OggS					application/ogg
-0	string		pnm:\/\/				audio/x-realaudio
-0	string		rtsp:\/\/				audio/x-realaudio
+0	string		pnm:\/\/				audio/x-real-audio
+0	string		rtsp:\/\/				audio/x-real-audio
 0	string		SIT! 					application/x-stuffit
 0	string		\312\376\272\276			application/x-java-byte-code
 0	string		Joy!					application/x-pef-executable
