@@ -1,3 +1,10 @@
+2003-07-22  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-vfs-mime-magic:
+	* gnome-vfs.keys.in:
+	* gnome-vfs.mime: Fix Real and Blender mime-types to go through
+	check-mime.pl
+
 2003-07-15  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* gnome-vfs.keys.in: use gpdf if available.
